# urirun-connector-document

./: README.md  pyproject.toml
.github/workflows/: ci.yml  integration-urirun-llm.yml
scripts/: ci_urirun_llm_smoke.py
tests/: test_document.py
urirun_connector_document/: core.py
